# tcl-vfs

./: Makefile.in  configure.in  pkgIndex.tcl.in
CVSROOT/: ciabot_cvs.pl  loginfo
tclvfs/: ChangeLog  DESCRIPTION.txt  Makefile.in  README.cygwin  Readme.txt  configure  configure.in  make55.tcl  mkIndex.tcl.in  pkgIndex.tcl.in  runZippedTests.tcl  tcl.m4
tclvfs/doc/: vfs-filesystems.man  vfs-fsapi.man  vfs.man  vfs.n  vfslib.n
tclvfs/examples/: simpleExamples.tcl
tclvfs/generic/: vfs.c
tclvfs/http2.6/: http.n  http.tcl  pkgIndex.tcl
tclvfs/mac/: Vfs.mcp.xml  pkgIndex_mac.tcl  vfs.r
tclvfs/tclconfig/: tcl.m4
tclvfs/tests/: all.tcl  cmdAH.test  encoding.test  fCmd.test  fileName.test  vfs.test  vfsArchive.test  vfsFtp.test  vfsUrl.test  vfsZip.test  winFCmd.test  winFile.test
tclvfs/win/: makefile.vc  vfs.exp  vfs.lib  vfs10.exp  vfs10.lib
tests/: all.tcl
win/: makefile.vc  tclvfs.rc
